<resources>
    <string name="app_name">App Portfolio</string>
    <string name="main_msg">My NanoDegree Apps!</string>
    <string name="app_1">Popular Movies</string>
    <string name="app_2">Stock Hawk</string>
    <string name="app_3">Build it Bigger</string>
    <string name="app_4">Make Your App Material</string>
    <string name="app_5">Go Ubiquitous</string>
    <string name="app_6">Capstone </string>
</resources>
