<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.seetharaman.appportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_msg"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_heading"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_1"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app1"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_app1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_2"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app2"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_app2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_3"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app3"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_app3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_4"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app4"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_app4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_5"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_app5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_6"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/b_app6"
        android:onClick="onClick"/>
</RelativeLayout>
